// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> compact 1`] = `
.c2 {
  margin-top: 0.5rem;
  margin-bottom: 0.5rem;
  font-size: 1.5rem;
  line-height: 2rem;
  --tw-text-opacity: 1;
  color: rgba(103,73,177,var(--tw-text-opacity));
  font-size: 1.5rem;
  line-height: 2rem;
}

.c1 {
  --tw-text-opacity: 1;
  color: rgba(103,73,177,var(--tw-text-opacity));
  font-size: 1.875rem;
  line-height: 2.25rem;
  margin-bottom: 0px;
  margin-top: 0.5rem;
  font-family: Inconsolata,monospace;
  font-size: 2.25rem;
  line-height: 2.5rem;
  font-weight: 700;
}

.c0 {
  text-align: center;
}

.c3 {
  display: block;
  margin-top: 1rem;
  margin-bottom: 1rem;
  margin-top: 2rem;
  margin-bottom: 2rem;
  --tw-bg-opacity: 1;
  background-color: rgba(0,0,0,var(--tw-bg-opacity));
}

@media print {
  .c1 {
    margin: 0px;
    --tw-shadow: 0 0 #0000;
    box-shadow: var(--tw-ring-offset-shadow,0 0 #0000),var(--tw-ring-shadow,0 0 #0000),var(--tw-shadow);
  }
}

<div
  class="c0"
  data-testid="header"
>
  <h1
    class="c1"
    data-testid="headerTitle"
  >
    kayak
  </h1>
  <h2
    class="c2"
    data-testid="headerSubtitle"
  >
    CEO of supermarket cookie quality debates
  </h2>
  <hr
    class="c3"
  />
</div>
`;

exports[`<Header /> displays header 1`] = `
.c2 {
  margin-top: 0.5rem;
  margin-bottom: 0.5rem;
  font-size: 1.5rem;
  line-height: 2rem;
  --tw-text-opacity: 1;
  color: rgba(103,73,177,var(--tw-text-opacity));
}

.c1 {
  --tw-text-opacity: 1;
  color: rgba(103,73,177,var(--tw-text-opacity));
  margin-bottom: 0px;
  margin-top: 0.5rem;
  font-family: Inconsolata,monospace;
  font-size: 2.25rem;
  line-height: 2.5rem;
  font-weight: 700;
}

.c0 {
  text-align: center;
}

.c3 {
  display: block;
  margin-top: 1rem;
  margin-bottom: 1rem;
  --tw-bg-opacity: 1;
  background-color: rgba(0,0,0,var(--tw-bg-opacity));
}

@media print {
  .c1 {
    margin: 0px;
    --tw-shadow: 0 0 #0000;
    box-shadow: var(--tw-ring-offset-shadow,0 0 #0000),var(--tw-ring-shadow,0 0 #0000),var(--tw-shadow);
  }
}

<div
  class="c0"
  data-testid="header"
>
  <h1
    class="c1"
    data-testid="headerTitle"
  >
    kayak
  </h1>
  <h2
    class="c2"
    data-testid="headerSubtitle"
  >
    CEO of supermarket cookie quality debates
  </h2>
  <hr
    class="c3"
  />
</div>
`;

exports[`<Header /> lightmode 1`] = `
.c2 {
  margin-top: 0.5rem;
  margin-bottom: 0.5rem;
  font-size: 1.5rem;
  line-height: 2rem;
  --tw-text-opacity: 1;
  color: rgba(255,255,255,var(--tw-text-opacity));
}

.c1 {
  --tw-text-opacity: 1;
  color: rgba(255,255,255,var(--tw-text-opacity));
  margin-bottom: 0px;
  margin-top: 0.5rem;
  font-family: Inconsolata,monospace;
  font-size: 2.25rem;
  line-height: 2.5rem;
  font-weight: 700;
}

.c0 {
  text-align: center;
}

.c3 {
  display: block;
  margin-top: 1rem;
  margin-bottom: 1rem;
  --tw-bg-opacity: 1;
  background-color: rgba(255,255,255,var(--tw-bg-opacity));
}

@media print {
  .c1 {
    margin: 0px;
    --tw-shadow: 0 0 #0000;
    box-shadow: var(--tw-ring-offset-shadow,0 0 #0000),var(--tw-ring-shadow,0 0 #0000),var(--tw-shadow);
  }
}

<div
  class="c0"
  data-testid="header"
>
  <h1
    class="c1"
    data-testid="headerTitle"
  >
    kayak
  </h1>
  <h2
    class="c2"
    data-testid="headerSubtitle"
  >
    CEO of supermarket cookie quality debates
  </h2>
  <hr
    class="c3"
  />
</div>
`;

exports[`<Header /> lightmode and compact 1`] = `
.c2 {
  margin-top: 0.5rem;
  margin-bottom: 0.5rem;
  font-size: 1.5rem;
  line-height: 2rem;
  --tw-text-opacity: 1;
  color: rgba(255,255,255,var(--tw-text-opacity));
  font-size: 1.5rem;
  line-height: 2rem;
}

.c1 {
  --tw-text-opacity: 1;
  color: rgba(255,255,255,var(--tw-text-opacity));
  font-size: 1.875rem;
  line-height: 2.25rem;
  margin-bottom: 0px;
  margin-top: 0.5rem;
  font-family: Inconsolata,monospace;
  font-size: 2.25rem;
  line-height: 2.5rem;
  font-weight: 700;
}

.c0 {
  text-align: center;
}

.c3 {
  display: block;
  margin-top: 1rem;
  margin-bottom: 1rem;
  margin-top: 2rem;
  margin-bottom: 2rem;
  --tw-bg-opacity: 1;
  background-color: rgba(255,255,255,var(--tw-bg-opacity));
}

@media print {
  .c1 {
    margin: 0px;
    --tw-shadow: 0 0 #0000;
    box-shadow: var(--tw-ring-offset-shadow,0 0 #0000),var(--tw-ring-shadow,0 0 #0000),var(--tw-shadow);
  }
}

<div
  class="c0"
  data-testid="header"
>
  <h1
    class="c1"
    data-testid="headerTitle"
  >
    kayak
  </h1>
  <h2
    class="c2"
    data-testid="headerSubtitle"
  >
    CEO of supermarket cookie quality debates
  </h2>
  <hr
    class="c3"
  />
</div>
`;

exports[`<Header /> renders OK 1`] = `
.c2 {
  margin-top: 0.5rem;
  margin-bottom: 0.5rem;
  font-size: 1.5rem;
  line-height: 2rem;
  --tw-text-opacity: 1;
  color: rgba(103,73,177,var(--tw-text-opacity));
}

.c1 {
  --tw-text-opacity: 1;
  color: rgba(103,73,177,var(--tw-text-opacity));
  margin-bottom: 0px;
  margin-top: 0.5rem;
  font-family: Inconsolata,monospace;
  font-size: 2.25rem;
  line-height: 2.5rem;
  font-weight: 700;
}

.c0 {
  text-align: center;
}

.c3 {
  display: block;
  margin-top: 1rem;
  margin-bottom: 1rem;
  --tw-bg-opacity: 1;
  background-color: rgba(0,0,0,var(--tw-bg-opacity));
}

@media print {
  .c1 {
    margin: 0px;
    --tw-shadow: 0 0 #0000;
    box-shadow: var(--tw-ring-offset-shadow,0 0 #0000),var(--tw-ring-shadow,0 0 #0000),var(--tw-shadow);
  }
}

<div
  class="c0"
  data-testid="header"
>
  <h1
    class="c1"
    data-testid="headerTitle"
  >
    John Doe
  </h1>
  <h2
    class="c2"
    data-testid="headerSubtitle"
  >
    Programmer
  </h2>
  <hr
    class="c3"
  />
</div>
`;
